--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,14 @@
     padding: 30px;
     text-align: center;
 }
+.services{
+    background-image: url('https://i.ibb.co/HtZzwgc/s-image.jpg');
+    background-size: cover;
+    background-position: fixed;
+    background-repeat: no-repeat;
+    padding: 5%;
+    text-align: center;
+}
+.sh,.sp{
+    color: white;
+}
