--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'PT Sans', sans-serif;
+}
 .home{
     background-image: url('https://i.ibb.co/TWkxxqQ/h-img.jpg');
     background-size: cover;
@@ -70,4 +73,41 @@
   span{
     font-size: 15px;
   }
- 
+  .portfolio {
+    padding-bottom: 50px;
+}
+#what-we-do{
+    height: 250px;
+  }
+
+/* what we do */
+#design-hide, #dev-hide, #prod-hide{
+    text-align: center;
+    display: none;
+  }
+
+  .wh{
+      padding-top: 30px;
+  }
+
+  /* portfolio */
+  .portimg {
+    float: right;
+    position: relative;
+    margin: 5px;
+    
+}
+.portimg .porttext {
+    display: none;
+    opacity: 1;
+    background-color:rgba(255, 255, 255, 0.8);
+    width: auto;
+    position: absolute;
+    bottom: 0;
+    color: black;
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    padding: 30px;
+    height: 100%;
+}
